--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Sumo jr soccer player",
   "main": "Soccer.js",
   "dependencies": {
+    "body-parser": "^1.9.0",
+    "cookie-parser": "^1.3.3",
+    "express": "^4.9.5",
+    "express.io": "^1.1.13",
     "johnny-five": "^0.8.11",
     "keypress": "^0.2.1",
+    "morgan": "^1.3.2",
     "spark-io": "^0.5.1"
   },
   "devDependencies": {},
